add css to project

--- a/4golden.html
+++ b/4golden.html
@@ -5,6 +5,7 @@
 <script src="angular-0.9.19.min.js" ng:autobind></script>
 <script src="data4golden.js"></script>
 <script src="app.js"></script>
+<link rel="stylesheet" href="main.css">
 <style>
 div.caption { text-align: center; width: 100%; }
 td { padding: 0 0.25em; }
