toggle dark theme

--- a/3portable.html
+++ b/3portable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 <head>
 <title>Persona 3 Portable: Fusion Calculator</title>
 <script src="angular-0.9.19.min.js" ng:autobind></script>
