--- a/3portable.html
+++ b/3portable.html
@@ -15,7 +15,7 @@ th { text-align: left; }
 .pagination span { cursor: pointer; }
 </style>
 </head>
-<body>
+<body class="container">
 
 <ng:view></ng:view>
 
