--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
 <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="container">
 
 <p>Please choose:</p>
 <ul>
